kubernetes/k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "Versión 1 - Prueba Cus"
  name: prueba-cus-svc
  labels:
    app: prueba-cus-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prueba-cus-svc
  template:
    metadata:
      labels:
        app: prueba-cus-svc
    spec:
      containers:
        - name: prueba-cus-svc
          image: razavala/prueba-cus:2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
#SERVICE
apiVersion: v1
kind: Service
metadata:
  name: prueba-cus-svc
  labels:
    app: prueba-cus-svc
spec:
  type: ClusterIP
  selector:
    app: prueba-cus-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
