kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-prueba-cus
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: / 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prueba-cus.zavalanolasco.com
    secretName: svc-prueba-cus-tls

  rules:
  - host: "prueba-cus.zavalanolasco.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prueba-cus-svc
            port:
              number: 80
